--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,6 @@
     android:padding="16dp"
     tools:context="com.example.scorekeeper.MainActivity">
 
-    <!-- TODO: Create a ShapeDrawable button_background.xml  shape:oval, stroke: 2dp,color: colorPrimary and add as background to all buttons.
-         TODO: extract dimension resource name: button_size 70dp and apply for all buttons
-    -->
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -24,12 +20,13 @@
 
         <ImageButton
             android:id="@+id/decreaseTeam1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_minus"
+            android:background="@drawable/button_background"
             android:contentDescription=
                 "@string/minus_button_description" />
 
@@ -43,12 +40,13 @@
 
         <ImageButton
             android:id="@+id/increaseTeam1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_plus"
+            android:background="@drawable/button_background"
             android:contentDescription=
                 "@string/plus_button_description" />
     </RelativeLayout>
@@ -67,12 +65,13 @@
 
         <ImageButton
             android:id="@+id/decreaseTeam2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_minus"
+            android:background="@drawable/button_background"
             android:contentDescription=
                 "@string/minus_button_description" />
 
@@ -86,12 +85,13 @@
 
         <ImageButton
             android:id="@+id/increaseTeam2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_plus"
+            android:background="@drawable/button_background"
             android:contentDescription=
                 "@string/plus_button_description" />
     </RelativeLayout>
