--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:text="@string/team_1"
             style="@style/TeamText" />
 
+<!--
         <ImageButton
             android:id="@+id/decreaseTeam1"
             android:layout_width="@dimen/button_size"
@@ -27,6 +28,17 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             style="@style/MinusButtons"/>
+-->
+        <ImageButton
+            android:id="@+id/decreaseTeam1"
+            android:layout_width="@dimen/button_size"
+            android:layout_height="@dimen/button_size"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            style="@style/MinusButtons"
+            />
+
 
         <TextView
             android:id="@+id/score_1"
